--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,17 @@
-.App {
+#recipeBox{
+  width: 90%;
+  margin: 20px auto;
+  font-size:16px;
+}
+.title{
+  font-size:1.2em;
   text-align: center;
+  margin-top:2px;
+  padding:5px;
 }
+#recipelist{
+  margin:15px;
+  padding:15px;
+  background-color: #DDDDDD;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
